--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,21 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40f61bc0",
+   "execution_count": 6,
+   "id": "7a2d773b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date de début;Date de fin;Organisme;code zas;Zas;code site;nom site;type d'implantation;Polluant;type d'influence;discriminant;Réglementaire;type d'évaluation;procédure de mesure;type de valeur;valeur;valeur brute;unité de mesure;taux de saisie;couverture temporelle;couverture de données;code qualité;validité</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025/01/01 00:00:00;2025/01/01 01:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025/01/01 01:00:00;2025/01/01 02:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025/01/01 02:00:00;2025/01/01 03:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025/01/01 03:00:00;2025/01/01 04:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025/01/01 04:00:00;2025/01/01 05:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025/01/01 05:00:00;2025/01/01 06:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025/01/01 06:00:00;2025/01/01 07:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2025/01/01 07:00:00;2025/01/01 08:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2025/01/01 08:00:00;2025/01/01 09:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2025/01/01 09:00:00;2025/01/01 10:00:00;ATMO G...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Date de début;Date de fin;Organisme;code zas;Zas;code site;nom site;type d'implantation;Polluant;type d'influence;discriminant;Réglementaire;type d'évaluation;procédure de mesure;type de valeur;valeur;valeur brute;unité de mesure;taux de saisie;couverture temporelle;couverture de données;code qualité;validité\n",
+       "0  2025/01/01 00:00:00;2025/01/01 01:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "1  2025/01/01 01:00:00;2025/01/01 02:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "2  2025/01/01 02:00:00;2025/01/01 03:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "3  2025/01/01 03:00:00;2025/01/01 04:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "4  2025/01/01 04:00:00;2025/01/01 05:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "5  2025/01/01 05:00:00;2025/01/01 06:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "6  2025/01/01 06:00:00;2025/01/01 07:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "7  2025/01/01 07:00:00;2025/01/01 08:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "8  2025/01/01 08:00:00;2025/01/01 09:00:00;ATMO G...                                                                                                                                                                                                                                                                    \n",
+       "9  2025/01/01 09:00:00;2025/01/01 10:00:00;ATMO G...                                                                                                                                                                                                                                                                    "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file_path = \"../data/raw/AirFrance_2025-01-01.csv\"\n",
+    "\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "df.head(10)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "airquality-ml",
+   "display_name": "Python (airquality-env)",
    "language": "python",
-   "name": "python3"
+   "name": "airquality-env"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.19"
   }
  },
