Perfomed and Compared metrices with rf,xg,lstm and Gru

--- a/notebooks/DeepLearning.ipynb
+++ b/notebooks/DeepLearning.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "cbf923c5",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
     "    \"lag_1\", \"lag_24\", \"rolling_3\"\n",
     "]\n",
     "\n",
-    "target_col = \"valeur\"   # we’ll predict actual pollution level"
+    "target_col = \"valeur\"   "
    ]
   },
   {
@@ -705,30 +705,6 @@
     "\n",
     "print(\"Saved LSTM metrics:\", mae_lstm, rmse_lstm, r2_lstm)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf8acf78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f46a30fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03e81733",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1192,18 +1168,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0de7b0f6",
+   "cell_type": "markdown",
+   "id": "db25d4b1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##Based on the evaluation metrics, tree-based models significantly outperformed deep learning architectures.\n",
-    "##XGBoost achieved the best results overall with the lowest MAE (3.42) and RMSE (5.69), and the highest R² value (0.9467), indicating strong predictive accuracy and ability to explain variance.\n",
-    "##RandomForest ranked second but showed comparable performance to XGBoost.\n",
-    "##In contrast, LSTM and GRU underperformed, with RMSE values nearly 2–5× higher and lower R² scores, suggesting that the sequential models did not capture temporal dependencies effectively under the current dataset configuration.\n",
-    "##GRU showed negative R², indicating that it performed worse than simply predicting the mean.\n",
-    "##Therefore, XGBoost is the recommended model for final deployment and dashboard integration."
+    "Based on the evaluation metrics, tree-based models significantly outperformed deep learning architectures.\n",
+    "XGBoost achieved the best results overall with the lowest MAE (3.42) and RMSE (5.69), and the highest R² value (0.9467), indicating strong predictive accuracy and ability to explain variance.\n",
+    "RandomForest ranked second but showed comparable performance to XGBoost.\n",
+    "In contrast, LSTM and GRU underperformed, with RMSE values nearly 2–5× higher and lower R² scores, suggesting that the sequential models did not capture temporal dependencies effectively under the current dataset configuration.\n",
+    "GRU showed negative R², indicating that it performed worse than simply predicting the mean.\n",
+    "Therefore, XGBoost is the recommended model for final deployment and dashboard integration."
    ]
   },
   {
@@ -1260,6 +1234,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bab2146c",
+   "metadata": {},
+   "source": [
+    "This project successfully explored air quality forecasting using data-driven techniques applied to the regional pollutant dataset. The workflow included raw data preprocessing, feature engineering, exploratory analysis, model development, validation, and dashboard deployment.\n",
+    "\n",
+    "Among all tested algorithms, tree-based models demonstrated superior predictive capability.\n",
+    "XGBoost achieved the best overall performance with the lowest errors (MAE = 3.42, RMSE = 5.69) and highest explanatory power (R² = 0.9467), making it the most reliable model for forecasting pollutant levels.\n",
+    "\n",
+    "RandomForest produced comparable performance, reinforcing the effectiveness of ensemble learning for structured environmental data.\n",
+    "\n",
+    "In contrast, deep learning models (LSTM and GRU) underperformed in this scenario.\n",
+    "This outcome reflects the sensitivity of sequence models to:\n",
+    "\n",
+    "larger datasets,\n",
+    "\n",
+    "richer temporal context, and\n",
+    "\n",
+    "additional external drivers such as weather or traffic patterns.\n",
+    "\n",
+    "Given the current feature set and training volume, XGBoost proved to be the optimal forecasting model and was integrated into an interactive Streamlit dashboard for real-time visualization and inference."
+   ]
   },
   {
    "cell_type": "code",
